--- a/index.html
+++ b/index.html
@@ -1307,7 +1307,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         pour le déplacement. Elles vivent isolées et ceci rend difficile leurs vies car toute personne a souvent besoin de sociabiliser. 
         <br>
         <br>
-        <b style="color:rgb(26, 90, 160); font-size: 22px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Sur la base de ces difficultés constituées des barrières sociales, de l'insuffisance d'infractrustures et de services adaptés, Tiki N'Yiki envisage construire un centre accadémique adapté nommé Accadémie Tiki N'Yiki dans lequel la priorité sera donnée aux étudiant-es handicapé-es. 
+        <b style="color:rgb(26, 90, 160); font-size: 23px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 16px;">
+          Sur la base de ces difficultés constituées des barrières sociales, de l'insuffisance d'infractrustures et de services adaptés, Tiki N'Yiki envisage construire un centre accadémique adapté nommé Accadémie 
+          Tiki N'Yiki dans lequel la priorité sera donnée aux étudiant-es handicapé-es. 
           Les programme seront axés sur l'education, les soins de santé, l'insécurité alimentaire et le changement climatique entre autres.</b>  
         <br><br>
         Le centre pourra offrir des chambres adaptées aux enfants handicapés dont les familles vivent loin de la ville le long de l'année afin de leur permettre de demeurer près du lieu d'étude. Par conséquent ils seront permis d'avoir des visites de leurs familles et proches en cas de besoin sur la base d'un agenda. 
@@ -1322,7 +1324,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         <b style="color:#ff0a06">Pour ce faire l'inclusion devrait être encouragée et supportée. </b>
         <br><br>
-        <b style="font-size: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 22px;">Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
+        <b style="font-size: 22px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 20px;">
+          Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
     </p>
 </div>
 
