--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -2px 4rem -10px rgba(150, 150, 150, 0.484);
+                 box-shadow: 0 -1px 4rem -10px rgba(135, 135, 135, 0.409);
           }
           
 
@@ -1250,7 +1250,7 @@ Tiki N'Yiki de la par la vision qu'elle a implémentée souhaiterait que dans un
   <img src="https://www.zupimages.net/up/23/23/gwuk.png" alt="Percussion djembé">
 <figure>
 <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left;">
-  Soleil levant
+  Soleil couchant de Laval
 </figcaption>
 </figure>
 </div>
