--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 4rem -10px rgba(135, 135, 135, 0.409);
+                 box-shadow: 0 -1px 4rem -10px rgba(144, 144, 144, 0.587);
           }
           
 
@@ -202,10 +202,11 @@
             text-align: right;
             width: 100%; 
             height: 160px; 
-            background: rgba(198, 198, 198, 0.344);
-            color: rgba(0, 0, 139, 0.879);
+            background: rgba(206, 206, 206, 0.382);
+            color: rgba(0, 0, 139, 0.66);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
+            padding: 0.4rem;
           }
           
           .Joint-Point{
@@ -355,7 +356,7 @@
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
-        background: -webkit-linear-gradient(rgb(0, 0, 0), rgba(45, 45, 45, 0.914));
+        background: -webkit-linear-gradient(rgb(35, 35, 35), rgba(54, 54, 54, 0.914));
         background-size: cover;
         object-fit:cover;
         color: #fff;
@@ -514,11 +515,12 @@ opacity: 1;
 }
 
 .YTP{
-  padding: 0.35rem;
+  padding: 0.5rem;
   text-align: left;
-  font-size: 23.6px;
-  line-height: 24.25px;
-  color: rgba(42, 108, 213, 0.932);
+  font-size: 22.45px;
+  line-height: 24px;
+  color: rgba(128, 128, 128, 0.732);
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .YTP:hover{
   color:green;
@@ -885,7 +887,7 @@ animation: auto 12s infinite ease-in;
 .student{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 4rem;
+  column-gap: 8rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
