--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 4rem -10px rgba(134, 134, 134, 0.658);
+                 box-shadow: 0 -1px 4rem -10px rgba(134, 134, 134, 0.592);
           }
           
 
@@ -491,7 +491,7 @@ hr{
  text-align: left; 
  color:rgba(151, 149, 149, 0.975);
  word-spacing: 1px;
- margin-top: -2.6rem;
+ 
  border: 0.11rem solid rgba(197, 197, 197, 0.744);
 }
 
@@ -517,8 +517,8 @@ opacity: 1;
 .YTP{
   padding: 0.5rem;
   text-align: left;
-  font-size: 22.45px;
-  line-height: 24px;
+  font-size: 22px;
+  line-height: 24.5px;
   color: rgba(128, 128, 128, 0.732);
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -874,7 +874,7 @@ animation: auto 12s infinite ease-in;
 
 .Ecole{
   display: grid;
-  grid-template-columns: 1.3fr 0.7fr;
+  grid-template-columns: 1.25fr 0.65fr;
   column-gap: 0.25rem;
   justify-content: center;
   justify-items: center;  
@@ -1351,7 +1351,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figure>
     </div>
   <div>
-    <p style="color:rgba(0, 0, 139, 0.717); font-size: 18.8px; font-family: Arial, Helvetica, sans-serif; text-align: justify;">
+    <p style="color:rgba(0, 0, 139, 0.717); font-size: 18px; font-family: Arial, Helvetica, sans-serif; text-align: justify;">
       Sur la base de ces difficultés constituées de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki veut construire un centre nommé Accadémie Tiki N'Yiki 
       dans lequel il y aura des salles de classe, des chambres adaptées, des salles de récréation et de conditionnement sportif, d'une salle de réunion, des bureaux et une cuisine pour les enseignants et certain-es élèves ou étudiant-es handicapé-es dont les familles habitent loin de l'accadémie. En plus le projet prendra en compte la fabrication et l'octroi de tricyles et/ou de fauiteuils roulants, moyens de déplacement 
       très utiles aux étudiant-es pour avoir une certaine mobilité en cas de nécessité d'aller en dehors de l'accadémie.
@@ -1403,7 +1403,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <img src="https://icons.iconarchive.com/icons/icons8/ios7/512/Science-Classroom-icon.png" alt="reader icon">
   <figure>
     <figcation style="color:rgba(0, 0, 0, 0.882); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 15px; margin-top: -1rem;">
-      Enseignants et étudiants en classe
+      Enseignants et étudiants en cours
       <figcation>
 </figure>
 </div>
@@ -1411,7 +1411,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   <img src="https://static.vecteezy.com/system/resources/thumbnails/002/165/413/small/line-icon-for-student-vector.jpg">
   <figure>
     <figcation style="color:rgba(0, 0, 0, 0.882); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 15px; margin-top: -1rem;">
-      L'éducation est un puissant outil de développement
+      L'éducation est un droit fondamental
       <figcation>
 </figure>
 </div>
