--- a/index.html
+++ b/index.html
@@ -1512,10 +1512,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <br>
           En d'autres termes cela siginifie que des technologies de surveillance, de contrôle, de sélection ou de détection vont assister le producteur pour mieux optimiser son rendement tout en respectant l'environnement. 
         </p>
-        <img src="https://www.zupimages.net/up/22/51/99tx.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
+        <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
           <figcaption style=" color:#055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: -1px;">
-            Vivres et fournitures scolaires à distribuer aux enfants handicapés
+            Oubritenga Avenue - Ouagadougou - Burkina Fas0
             </figcaption>
     </figure>
     
