--- a/index.html
+++ b/index.html
@@ -1345,7 +1345,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://cdn-icons-png.flaticon.com/512/167/167707.png" alt="Icon of a school building">
         <figure>
             <figcaption style="font-family: 'arial black'; font-size: 12px; color: rgba(0, 0, 139, 0.52); margin-top: -1rem;">
-              Accadémie Tiki N'Yiki. Le logo sera inscrit sur le drapeau en haut
+              Un modèle de l'Accadémie Tiki N'Yiki. Le logo sera au haut du drapeau
             </figcaption>
           </figure>
       </figure>
@@ -1368,7 +1368,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         <b style="color:#ff0a06">Pour ce faire l'inclusion devrait être encouragée et supportée. </b>
         <br><br>
-        <b style="font-size: 22px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 20px;">
+        <b style="font-size: 22px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 23px;">
           Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
     </p>
 </div>
@@ -1402,7 +1402,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div>
     <img src="https://icons.iconarchive.com/icons/icons8/ios7/512/Science-Classroom-icon.png" alt="reader icon">
   <figure>
-    <figcation style="color:rgba(0, 0, 0, 0.882); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 15px; margin-top: -1rem;">
+    <figcation style="color:rgba(6, 110, 247, 0.97); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 17px; margin-top: -1rem;">
       Enseignants et étudiants en cours
       <figcation>
 </figure>
@@ -1410,7 +1410,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div>
   <img src="https://static.vecteezy.com/system/resources/thumbnails/002/165/413/small/line-icon-for-student-vector.jpg">
   <figure>
-    <figcation style="color:rgba(0, 0, 0, 0.882); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 15px; margin-top: -1rem;">
+    <figcation style="color:rgba(6, 110, 247, 0.97); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 17px; margin-top: -1rem;">
       L'éducation est un droit fondamental
       <figcation>
 </figure>
