--- a/index.html
+++ b/index.html
@@ -700,10 +700,10 @@ animation: auto 12s infinite ease-in;
     text-align: left;
     width: 73.5%;
     height: auto;
-    font-family:  'helvetica'; 
+    font-family:  'arial'; 
     font-size: 1.1rem; 
-    color: rgba(5, 5, 5, 0.866);
-    line-height: 26px;
+    color: rgba(13, 13, 13, 0.866);
+    line-height: 25px;
     padding: 10px;
     word-spacing: 1px;
 }
@@ -765,10 +765,10 @@ animation: auto 12s infinite ease-in;
     text-align: left;
     width: 100%;
     height: auto;
-    font-family:  'helvetica'; 
+    font-family:  'arial'; 
     font-size: 1.1rem; 
-    color: rgba(30, 30, 30, 0.959);
-    line-height: 26px;
+    color: rgba(13, 13, 13, 0.866);
+    line-height: 25px;
     word-spacing: 1px;
 }
 
@@ -1398,7 +1398,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
     <div class="k1" style="border-top: 0.16rem dotted rgba(90, 90, 90, 0.563);">
-      <div class="student">
+
+      <a href="https://www.visionmondiale.ca/blog/education/pourquoi-leducation-est-elle-importante" target="_blank">
+      
+        <div class="student">
+        
         <div>
     <img src="https://icons.iconarchive.com/icons/icons8/ios7/512/Science-Classroom-icon.png" alt="reader icon">
   <figure>
@@ -1407,6 +1411,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <figcation>
 </figure>
 </div>
+
 <div>
   <img src="https://static.vecteezy.com/system/resources/thumbnails/002/165/413/small/line-icon-for-student-vector.jpg">
   <figure>
@@ -1416,6 +1421,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </figure>
 </div>
   </div>
+</a>
+
 </div>
 
     <div class="k1">
@@ -1595,7 +1602,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour sa contribution à l'établissement du Centre Paas Neere à Ziniaré. 
                 <br>
                 <br>
-                En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont, Rhodes Island, Connecticut] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
+                En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
                 <br>
                 <br>
                 C'est ainsi que Gabriel a été invité pour un séjour de récolte de fonds (fundraising) pendant 3 mois aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg" target="_blank"> Etats-Unis </a> à partir du 14 Juillet au 1er Octobre 2016. Ces levées de fonds étaient généralement organisées par des ami-es et se tenaient dans différents états Américains. Ce qui a aussi permis à Gabriel de découvrir la diversité des Etats-Unis en matière de culture et d'environnement de l'Est [Boston] à l'Ouest [Portland-Olympia]. 
@@ -1629,7 +1636,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </div>
    
 
-    <div class="Thanking" style="padding: 1rem; margin-top: -3rem;"> <b style="font-family: georgia; color: #055ce8; font-size: 20px">
+    <div class="Thanking" style="padding: 1rem;"> <b style="font-family: georgia; color: #055ce8; font-size: 20px">
       Merci pour votre attention et vos différents soutiens ! 
     </b>
   </div>
