--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ animation: auto 12s infinite ease-in;
     justify-items: left;
     justify-content: center;
     text-align: left;
-    width: 73.5%;
+    width: 73%;
     height: auto;
     font-family:  'arial'; 
     font-size: 1.1rem; 
@@ -754,7 +754,7 @@ animation: auto 12s infinite ease-in;
   justify-items: center;
   padding: 10px;
   height: 820px;
-  width: 73.5%;
+  width: 73%;
 }
 
 .CRT1{
@@ -1398,11 +1398,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
     <div class="k1" style="border-top: 0.16rem dotted rgba(90, 90, 90, 0.563);">
-
       <a href="https://www.visionmondiale.ca/blog/education/pourquoi-leducation-est-elle-importante" target="_blank">
-      
-        <div class="student">
-        
+      <div class="student">
         <div>
     <img src="https://icons.iconarchive.com/icons/icons8/ios7/512/Science-Classroom-icon.png" alt="reader icon">
   <figure>
@@ -1412,6 +1409,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </figure>
 </div>
 
+
 <div>
   <img src="https://static.vecteezy.com/system/resources/thumbnails/002/165/413/small/line-icon-for-student-vector.jpg">
   <figure>
@@ -1420,9 +1418,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <figcation>
 </figure>
 </div>
-  </div>
-</a>
 
+  </div>
 </div>
 
     <div class="k1">
@@ -1602,7 +1599,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour sa contribution à l'établissement du Centre Paas Neere à Ziniaré. 
                 <br>
                 <br>
-                En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
+                En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont, Rhodes Island, Connecticut] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
                 <br>
                 <br>
                 C'est ainsi que Gabriel a été invité pour un séjour de récolte de fonds (fundraising) pendant 3 mois aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg" target="_blank"> Etats-Unis </a> à partir du 14 Juillet au 1er Octobre 2016. Ces levées de fonds étaient généralement organisées par des ami-es et se tenaient dans différents états Américains. Ce qui a aussi permis à Gabriel de découvrir la diversité des Etats-Unis en matière de culture et d'environnement de l'Est [Boston] à l'Ouest [Portland-Olympia]. 
@@ -1663,4 +1660,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
