--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ animation: auto 12s infinite ease-in;
     background: #fff;
     justify-items: left;
     justify-content: center;
-    text-align: left;
+    text-align: justify;
     width: 73%;
     height: auto;
     font-family:  'arial'; 
@@ -729,6 +729,7 @@ animation: auto 12s infinite ease-in;
   color: #050819f6;
   word-spacing: 1.5px;
   opacity: 0.93;
+  text-align: justify;
 }
 
 .kgp{
@@ -762,7 +763,7 @@ animation: auto 12s infinite ease-in;
     background: #fff;
     justify-items: left;
     justify-content: center;
-    text-align: left;
+    text-align: justify;
     width: 100%;
     height: auto;
     font-family:  'arial'; 
