--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 4rem -10px rgba(134, 134, 134, 0.592);
+                 box-shadow: 0 -1px 3.65rem -10px rgba(139, 139, 139, 0.549);
           }
           
 
@@ -517,9 +517,9 @@ opacity: 1;
 .YTP{
   padding: 0.5rem;
   text-align: left;
-  font-size: 22px;
+  font-size: 20.8px;
   line-height: 24.5px;
-  color: rgba(128, 128, 128, 0.732);
+  color: rgba(124, 124, 124, 0.763);
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .YTP:hover{
@@ -1600,13 +1600,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour sa contribution à l'établissement du Centre Paas Neere à Ziniaré. 
                 <br>
                 <br>
-                En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont, Rhodes Island, Connecticut] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
+                En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
                 <br>
                 <br>
                 C'est ainsi que Gabriel a été invité pour un séjour de récolte de fonds (fundraising) pendant 3 mois aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg" target="_blank"> Etats-Unis </a> à partir du 14 Juillet au 1er Octobre 2016. Ces levées de fonds étaient généralement organisées par des ami-es et se tenaient dans différents états Américains. Ce qui a aussi permis à Gabriel de découvrir la diversité des Etats-Unis en matière de culture et d'environnement de l'Est [Boston] à l'Ouest [Portland-Olympia]. 
                 <br>
                 <br>
-                L'argent récolté a pu financer certains projets de Tiki N'Yiki y compris des fournitures scolaires, de vivres (riz) du transport et de la mobilité des enfants et étudiants handicapés en leur achetant des moyens de déplacement. Par ailleurs l'entretien et la reparation de tricyles usagés pour certains usagers handicapés en besoin est pris en charge financièrement. Aussi un soutien financier a été apporté aux enfants handicapés malades dont les familles ne pouvaient pratiquement pas prendre en charge les frais des ordonnances médicales. 
+                L'argent récolté a pu financer des projets de Tiki N'Yiki tels que des fournitures scolaires, de vivres (riz) du transport et de la mobilité des enfants et étudiants handicapés en leur achetant des moyens de déplacement. Par ailleurs l'entretien et la reparation de tricyles usagés pour certains usagers handicapés en besoin est pris en charge financièrement. Aussi un soutien financier a été apporté aux enfants handicapés malades dont les familles ne pouvaient pratiquement pas prendre en charge les frais des ordonnances médicales. 
                 En rappel il n'y a pas de couverture sociale nationale pour les personnes handicapées qui ne sont pas des fonctionnaires de l'état du <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Elles doivent se soigner à leurs frais quands elles tombent malades sinon elles décèdent.
                 <br>
                 <br>
