--- a/index.html
+++ b/index.html
@@ -1336,8 +1336,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;"> Construction de l'Accadémie Tiki N'Yiki</b> 
         <br>
-        Il est impensable de voir que des personnes handicapées ne soient pas à mesure de partir à l'hôpital quand elles tombent malades, aller étudier ou sortir pour une simple visite faute de moyens de transport. Elles n'ont pas la possibilité de le faire. Elles n'ont pas de voitures, de motos ni même des tricycles 
-        pour le déplacement. Elles vivent isolées et ceci rend difficile leurs vies car toute personne a souvent besoin de sociabiliser. 
+        Il est impensable de voir que des personnes handicapées ne soient pas à mesure de partir à l'hôpital pour consulter ou se faire soigner quand elles tombent malades, aller étudier, aller au marché, au culte ou simplement sortir pour une marche en cause du manque de moyens de transport. Elles n'ont pas la possibilité de le faire. Les personnes handicapées n'ont ni voitures, ni motos ni même de tricycles 
+        pour se déplacement. Elles vivent généralement isolées et ceci ne reconforte pas leurs vies parce qu'il leur manque une sociabilisation. 
         <br>
         
         <br>
@@ -1360,8 +1360,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
    <br>
         </div>
       </div>
-        Etant handicapés, pouvoir vivre et étudier au centre Tiki N'Yiki qui sera établi en ville est synonyme d'une proximité aux services comme l'hôpital, les centres d'achat, les lieux de sport, de divertissement. 
-        Au déla de cette proximité avec différents services en ville, la discrimination va s'amoindrir quant-à comparer à leur vie en campagne ou l'inclusion est pas très balbutiante voire inexistante. 
+        En étant handicapés, pouvoir loger et étudier au centre Tiki N'Yiki établi en ville sera synonyme de proximité à d'importants services comme l'hôpital, les lieux de culte, les centres d'achat, les lieux de sport, de divertissement. 
+        Au déla de cette proximité avec différents services en ville, la discrimination va s'amoindrir quant-à comparer à leur vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
         <br>
         <br>
         Nous connaissons tous l'importance de l'éducation comme un puissant outil pour tout humain. En effet le but premier de Tiki N'Yiki est de permettre aux enfants handicapés d'accéder à une bonne éducation et avoir des opportunities dont ils méritent malgré leur handicap. 
