--- a/index.html
+++ b/index.html
@@ -1300,9 +1300,9 @@ Tiki N'Yiki de la par la vision qu'elle a implémentée souhaiterait que dans un
 </span>
   <p>
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais elles vivent de pires scénarios en matière de discriminations quotidiennes entre autres en Afrique et spécialement au Burkina Faso.
-    <br>Comment se fait-il que des personnes handicapées dépendantes et vivant isolées soient oubliées quand doit on leur apporter à manger ou à boire? Oubliées quand on doit les faire prendre un bain ? Leur apporter un besoin quelconque souhaité tant ? Comment se fait-il que des êtres humains soient négligés comme beaucoup de handicapé-es le sont au Burkina Faso ?
-    Pourquoi des personnes handicapées sont cachées quand des cérémonies se déroulent dans leurs propres familles et qu'elles voudraient assister ? Pourquoi elles sont mises de côté quand il s'agit de recevoir de soins médicaux qu'il faut ? 
+    Les personnes handicapées sont discriminées partout à travers le monde mais celles qui vivent en Afrique et spécialement au Burkina Faso expérimentent de dures discriminations quotidiennes entre autres.
+    <br>Comment se fait-il que des personnes handicapées dépendantes et vivant isolées soient oubliées quand on doit leur apporter à manger ou à boire? Oubliées quand on doit les faire prendre un bain ? Oubliées quand on doit leur apporter un besoin quelconque tant souhaité ? Comment se fait-il que des êtres humains soient négligés de la sorte comme beaucoup de handicapé-es le sont au Burkina Faso ?
+    Pourquoi des personnes handicapées sont cachées quand des cérémonies se déroulent dans leurs propres familles et qu'elles voudraient assister ? Pourquoi elles sont mises de côté quand il s'agit de les donner des soins médicaux qu'il faut ? 
     L'unique réponse satisfaisante et commune à ces questions est: <b style="color: red">La DISCRIMINATION. </b>
   </p>
   </div>
@@ -1310,7 +1310,7 @@ Tiki N'Yiki de la par la vision qu'elle a implémentée souhaiterait que dans un
   <div class="k1">
     <hr style="color: rgb(13, 31, 136); justify-self: left;"> 
     <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
-      <strong>Manque d'infrastructures, Indifférence. Négligeance 
+      <strong>Manque d'infrastructures, Négligeance et Indifférence. 
     </strong>
     </span>
     
@@ -1457,7 +1457,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Enseignement au Burkina Faso">
         <figure>
         <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
-        Enseigner pour les enfants pour améliorer leur éducation [<a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso</a>]
+        Enseigner les enfants pour améliorer leur éducation [<a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso</a>]
     </figcaption>
 </figure>
 
@@ -1520,7 +1520,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
           <figcaption style=" color:#055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: -1px;">
-            Oubritenga Avenue - Ouagadougou - Burkina Fas0
+            Avenue d'Oubritenga - Ouagadougou - Burkina Fas0
             </figcaption>
     </figure>
     
