--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 -1px 4.5rem -10px rgba(91, 91, 91, 0.494);
+                 border-top: 0.2rem solid #0596fe;
           }
           
 
