--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <hr style="color: rgba(239, 54, 7, 0.977); justify-self: center;"> 
         <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;"> Construction de l'Accadémie Tiki N'Yiki</b> 
         <br>  
-        Il est impensable de voir que des personnes handicapées ne soient pas à mesure de partir à l'hôpital pour consulter ou se faire soigner quand elles tombent malades, aller étudier, aller au marché, au culte ou simplement sortir pour une marche en cause du manque de moyens de transport. 
+        Il est impensable de voir que des personnes handicapées ne soient pas à mesure de partir à l'hôpital pour consulter ou se soigner quand elles tombent malades, d'aller étudier, au marché, au culte ou simplement sortir pour une marche à cause du manque de moyens de déplacement (transport). 
         <br>  
         Elles n'ont pas la possibilité de le faire. Les personnes handicapées vivent généralement isolées car elles ne possèdent pas de voitures, de motos ni même de tricycles 
         pour se déplacer. 
@@ -1374,8 +1374,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
   <div>
     <p style="color:rgba(0, 0, 139, 0.717); font-size: 18px; font-family: Arial, Helvetica, sans-serif; text-align: justify;">
-      Sur la base de ces difficultés constituées de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki veut construire un centre nommé Accadémie Tiki N'Yiki 
-      dans lequel il y aura des salles de classe, des chambres adaptées, des salles de récréation et de conditionnement sportif, d'une salle de réunion, des bureaux et une cuisine pour les enseignants et certain-es élèves ou étudiant-es handicapé-es dont les familles habitent loin de l'accadémie. 
+      Sur la base de ces difficultés constituées de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre nommé Accadémie Tiki N'Yiki 
+      Dans ce centre il y aura des salles de classe, des chambres adaptées, des salles de conditionnement sportif, des salles de réunion, des bureaux et des cuisines pour les enseignants et certain-es élèves ou étudiant-es handicapé-es dont les familles habitent en campagne. 
       
       Le projet prendra en compte la fabrication et l'octroi de tricyles et/ou de fauiteuils roulants, moyens de déplacement 
       très utiles aux étudiant-es pour avoir une certaine mobilité en cas de nécessité d'aller en dehors de l'accadémie.
@@ -1383,8 +1383,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
    <br>
         </div>
       </div>
-        En étant handicapés, pouvoir loger et étudier au centre Tiki N'Yiki établi en ville sera synonyme de proximité à d'importants services comme l'hôpital, les lieux de culte, les centres d'achat, les lieux de sport, de divertissement. 
-        Au déla de cette proximité avec différents services en ville, la discrimination va s'amoindrir quant-à comparer à leur vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
+        En étant handicapés, pouvoir loger et étudier au centre Tiki N'Yiki établi en ville sera synonyme de proximité d'importants services comme l'hôpital, les lieux de culte, les centres d'achat, les lieux de sport, de divertissement. 
+        Au déla de cette vie en ville, la discrimination va s'amoindrir vis-àvis de la vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
         <br>
         <br>
         Nous connaissons tous l'importance de l'éducation comme un puissant outil pour tout humain. En effet le but premier de Tiki N'Yiki est de permettre aux enfants handicapés d'accéder à une bonne éducation et avoir des opportunities dont ils méritent malgré leur handicap. 
@@ -1428,7 +1428,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <img src="https://icons.iconarchive.com/icons/icons8/ios7/512/Science-Classroom-icon.png" alt="reader icon">
   <figure>
     <figcation style="color:rgba(6, 110, 247, 0.97); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 17px; margin-top: -1rem;">
-      Enseignants et étudiants en cours
+      Enseignant et étudiants en cours
       <figcation>
 </figure>
 </div>
