--- a/index.html
+++ b/index.html
@@ -1214,14 +1214,15 @@ function myFunction() {
         Le Burkina Faso est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de 
         <em style="color: red">274.300 kilomètres carrés avec une population de 22.1 millions d'habitants. Le Burkina Faso partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. 
         </em>  Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage
-        Heureusement elle se diversifie à travers d'autres secteurs comme les services et le numérique. 
+        Heureusement elle a commencé à se diversifie à travers d'autres secteurs comme les services et le numérique. 
         <br>  
-        <br> Par contre son économie reste impactée par une crise sécuritaire qui sécoue la sous-région y compris le Mali et le Niger qui partagent des frontières communes avec le Burkina Faso et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les d.placés internes.     
+        <br> 
+        Par contre sonéconomie reste fortement impactée par une crise sécuritaire liée au terrorisme violent et brutals qui sécoue la sous-région y compris le Mali et le Niger qui partagent des frontières communes avec le Burkina Faso et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les déplacés internes.     
         <br>  
         <br>     
-        Malgré une population croissante d'à peu près 2 millions de personnes dont le handicap a été causé soit par la polio ou d'autres maladies, de vieillesse ou de cas accidentaux, il est toujours fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, discriminées et livrées à elles-mêmes. 
-        Ceci n'est pas seulement causé par une culture d'exclusion dûe aux barrières sociales,
-        mais aussi par un manque substantiel de légifération sur le handicap et la vie des handicapés. 
+        Malgré une population croissante d'à peu près 2 millions de personnes handicapées causées soit par la polio ou soit par d'autres maladies, soit dûe à la vieillesse ou d'accidents, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
+        Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe,
+        mais aussi par un manque substantiel de légifération sur le handicap et les droits et les devoirs corollaires. 
        C'est très difficile pour les personnes handicapées de lutter pour avoir leurs droits mais elles n'ont pas le choix.  
         
         </div>
@@ -1258,16 +1259,18 @@ function myFunction() {
           <div class="K" style="display: grid; grid-template-rows: 0.25fr 1.75fr;">
 
           <div class="KT">
-        <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré le handicap mais jouissant de tous leurs droits
+        <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré le handicap mais en jouissant de leurs droits
          car d'aucuns savent que vivre avec un handicap est à quelque part synonyme d'endurer de multiples barrières sociales.  
          <br>
          <br>
-         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes chaque jour. Si elles vivent exclues comme une île au milieu d'un océan sans aucune connection avec la terre ferme, avoir des opportunités sera sans doute très rare. 
-         Le fait que des gens qui étaient censés être aidés les premiers, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement une erreur sociale mais indique le niveau des mentalités des un-es et des autres. 
+         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes. Si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il est très difficile de rencontrer des opportunités. 
+         Le fait que des gens qui étaient censés être aidés les premiers, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement une erreur sociale mais indique l'état des mentalités, l'environnement peu inclusif par rapport à la différence. 
 <br>
 <br>
-Tiki N'Yiki de la par la vision qu'elle a implémentée souhaiterait que dans un futur très immédiat, les barrières tombent et que toute personne handicapée puisse être totalement inclue sans distinction, son droit respecté et sa vie facilitée. Ceci conduira à un changement progressif et positif plûtot que de la peur et des discriminations sociales vécues. 
-<em style="color:rgba(255, 1, 1, 0.996)">C'est pour ce faire que les enfants handicapés doivent être promus comme il se le doit afin de les frayer le chemin, les ouvrir des portes et leur créér des opportunités.</em>
+Tiki N'Yiki veut travailler à changer ces mentalités dans un futur très immédiat, faire tomber les barrières afin que toute personne handicapée puisse être inclue, son droit respecté et sa vie facilitée. Ceci conduira à un changement progressif et positif plûtot que de la peur et des discriminations sociales vécues. 
+<br>
+<br>
+<em style="color:rgba(255, 1, 1, 0.996); font-size: 18px;">Les enfants handicapés doivent être mieux encadrés, promus afin de les frayer des chemins et les créér des opportunités.</em>
         </p>
       </div> 
 
@@ -1304,7 +1307,7 @@ Tiki N'Yiki de la par la vision qu'elle a implémentée souhaiterait que dans un
   <p>
     <br>
     Les personnes handicapées sont discriminées partout à travers le monde mais celles qui vivent en Afrique et spécialement au Burkina Faso expérimentent de dures discriminations quotidiennes entre autres.
-    <br>Comment se fait-il que des personnes handicapées dépendantes et vivant isolées soient oubliées quand on doit leur apporter à manger ou à boire? 
+    Comment se fait-il que des personnes handicapées dépendantes et vivant isolées soient oubliées quand on doit leur apporter à manger ou à boire? 
     <br>  
     <br> 
     Oubliées quand on doit les faire prendre un bain ? Oubliées quand on doit leur apporter un besoin quelconque tant souhaité ? 
